fix: fix margins and wrapping in zoos pages

--- a/online-zoo/pages/zoos/alligator/style.css
+++ b/online-zoo/pages/zoos/alligator/style.css
@@ -167,15 +167,18 @@ input:checked+.switch__slider:before {
 .main {
   display: flex;
   justify-content: start;
+  height: 910px;
   background-color: #fbfbfb;
 }
 
 /* sidebar */
 
+.aside{
+  position: relative;
+}
+
 .sidebar {
   position: sticky;
-  top: 154px;
-  bottom: 800px;
 
   display: flex;
   justify-content: space-between;
@@ -184,6 +187,9 @@ input:checked+.switch__slider:before {
   height: 597px;
   width: 157px;
   margin: 60px 0 0 26px;
+
+  top: 154px;
+  bottom: 800px;
 }
 
 .aside-arrow:hover{
@@ -191,11 +197,23 @@ input:checked+.switch__slider:before {
   opacity: 0.8;
 }
 
+.aside-arrow_top{
+  padding-bottom: 10px;
+}
+
+.aside-arrow_buttom{
+  padding-top: 10px;
+}
+
 /* section */
 
 .animal {
   display: flex;
   width: 100%;
+}
+
+.animal__wrapper{
+  margin-left: 175px;
 }
 
 .wrapper {
@@ -248,6 +266,9 @@ input:checked+.switch__slider:before {
 }
 
 .broadcast__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   margin-bottom: 100px;
 }
@@ -263,7 +284,10 @@ input:checked+.switch__slider:before {
   border-radius: 50%;
   background: #c4c4c4;
   cursor: pointer;
-  margin: 5px;
+}
+
+[id^=button2]+label {
+  margin: 0 5px;
 }
 
 [id^=button]:checked+label {
@@ -348,7 +372,6 @@ button {
   justify-content: center;
   width: 194px;
   height: 55px;
-  margin-top: 29px;
 
   background: linear-gradient(106.89deg, #4BD8B5 -14.32%, #49D6DF 100.68%);
   border-radius: 3px;
@@ -365,6 +388,10 @@ button {
   color: #fff;
 
   transition: all 0.2s;
+}
+
+.animal__button{
+  margin-top: 35px;
 }
 
 .button:hover {
