--- a/online-zoo/pages/zoos/panda/style.css
+++ b/online-zoo/pages/zoos/panda/style.css
@@ -167,10 +167,15 @@ input:checked+.switch__slider:before {
 .main {
   display: flex;
   justify-content: start;
+  height: 910px;
   background-color: #fbfbfb;
 }
 
 /* sidebar */
+
+.aside{
+  position: relative;
+}
 
 .sidebar {
   position: sticky;
@@ -192,11 +197,22 @@ input:checked+.switch__slider:before {
   opacity: 0.8;
 }
 
+.aside-arrow_top{
+  padding-bottom: 10px;
+}
+
+.aside-arrow_buttom{
+  padding-top: 10px;
+}
+
 /* section */
 
 .animal {
   display: flex;
-  width: 100%;
+}
+
+.animal__wrapper{
+  margin-left: 175px;
 }
 
 .wrapper {
@@ -219,12 +235,11 @@ input:checked+.switch__slider:before {
 
 .animal__head {
   width: 883px;
-  margin: 62px 0 40px 0;
+  margin: 70px 0 40px 0;
 }
 
 .animal__content {
   display: flex;
-  width: 100%;
 }
 
 .iframe {
@@ -249,6 +264,9 @@ input:checked+.switch__slider:before {
 }
 
 .broadcast__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   margin-bottom: 100px;
 }
@@ -264,7 +282,10 @@ input:checked+.switch__slider:before {
   border-radius: 50%;
   background: #c4c4c4;
   cursor: pointer;
-  margin: 5px;
+}
+
+[id^=button2]+label {
+  margin: 0 5px;
 }
 
 [id^=button]:checked+label {
@@ -349,7 +370,6 @@ button {
   justify-content: center;
   width: 194px;
   height: 55px;
-  margin-top: 29px;
 
   background: linear-gradient(106.89deg, #4BD8B5 -14.32%, #49D6DF 100.68%);
   border-radius: 3px;
@@ -366,6 +386,10 @@ button {
   color: #fff;
 
   transition: all 0.2s;
+}
+
+.animal__button{
+  margin-top: 35px;
 }
 
 .button:hover {
